<resources>
    <string name="app_name">Pay Social</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="strPayTv">Pay TV</string>
    <string name="strInternet">Internet</string>
    <string name="strElectricity">Electricity</string>
    <string name="strDoMore">Do More</string>
    <string name="strPayBills">Pay Bills</string>
    <string name="strEnter">Enter</string>
    <string name="strHintUserId">User ID</string>
    <string name="strTransactionHistory">Transactions</string>
    <string name="strMyProfile">Profile</string>

    <string name="strBillsMore">Pay Bills and More</string>
    <string name="strFaqContact">FAQs / Contact Us</string>
    <string name="strTerConditions">Terms and Conditions</string>
    <string name="strPriPolicy">Privacy Policy</string>
    <string name="strTrCodeTracker">Transaction Code Tracker</string>
    <string name="strPayQuicker">Pay quicker than ever.</string>
    <string name="strEslipShare"><![CDATA[with e-Slip Save & Share via]]></string>
    <string name="strTransferBillsTopup">Transfer, top up or pay bills, worry free</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_fullname">Full Name</string>
    <string name="str_email_add">Email Address</string>
    <string name="str_phone_no">Phone Number</string>
    <string name="str_select_provider">Select a Service Provider</string>
    <string name="str_dynamic_value">{Service ID Number}</string>
    <string name="str_make_payment_title">{Navigation Breadcrumb}</string>
    <string name="str_amt_to_pay">Amount to Pay e.g. 15000</string>
    <string name="str_select_bank">Select Bank for Transfer</string>
    <string name="str_communication_method">How to communicate?</string>
    <string name="str_submit">Submit</string>
    <string name="make_payment_title">Pay Bills > %1$s</string>
    <string name="confirm_payment_title">Pay Bills > %1$s > Confirm</string>
    <string name="complete_payment_title">Pay Bills > %1$s > Complete</string>
    <string name="str_welcome_hand_holding_phone_image">Hand holding phone image used as back ground in welcome page</string>
    <string name="str_welcome_gradient_background_desc">Background with green gradient and alpha valur to give some transparency</string>
    <string name="lauch_img_icon_desc">Icons to describe each app feature on the launch page</string>
    <string name="str_pay_social">Welcome to Pay Social</string>
    <string name="str_login">Log in</string>
    <string name="str_create_account">Create Account</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_logo_desc">Image View holding the logo on the launch screen</string>
    <string name="str_pay_quicker">Pay quicker than ever with Pay Social</string>
    <string name="str_pay_quick_subtitle"><![CDATA[Pay your bills, buy airtime & transfer funds to friends & family.]]></string>
    <string name="str_paybills_title">Pay your bills easily</string>
    <string name="str_paybills_subtitle">Pay your electricity bills, satellite TV subscription, internet subscription - and so much more.</string>
    <string name="str_buy_airtime_title">Topup your airtime</string>
    <string name="str_topup_subtitle">Topup airtime conveniently on any network for yourself, friends or family.</string>
    <string name="str_transfer_money_title">Transfer money fast</string>
    <string name="str_transfer_subtitle">Transfer funds instantly to friends and family within the country.</string>
    <string name="str_share_title">Save &amp; Share e-Slip</string>
    <string name="str_share_subtitle"><![CDATA[Save e-Slip and Share it via Facebook, WhatsApp, Line & Instagram.]]></string>
    <string name="str_username">USERNAME</string>
    <string name="str_password">PASSWORD</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="login_back_button_desc">Back button for login screen</string>
    <string name="str_signup_back_desc">Back button for signup fragment</string>
    <string name="str_whats_your_name">What\'s your name?</string>
    <string name="str_firstname">FIRST NAME</string>
    <string name="str_lastname">LAST NAME</string>
    <string name="str_next">Next</string>
    <string name="str_val">..page_number..</string>
    <string name="str_page_number">{page_number _value}</string>

    <string name="signup_page_number_value">%1$s of 4</string>
    <string name="str_email_password">Email and password?</string>
    <string name="str_email_Address">EMAIL ADDRESS</string>
    <string name="str_mobile_number">MOBILE NUMBER</string>
    <string name="str_create_account_title">Create account.</string>
    <string name="str_username_password_instructions">Your username and password must be 6 or more character long.</string>
    <string name="str_finish">Finish</string>

    <string name="field_required_error">This field is required</string>
    <string name="str_total_spent">TOTAL SPENT</string>
    <string name="str_dynamic_input">{Dynamic Value}</string>
    <string name="str_ngn">NGN</string>
    <string name="str_history">History</string>
    <string name="img_services_icon_desc">Icon to depict service offered in the services row button</string>
    <string name="str_paytv_subtitle">DSTV, Kwese TV, Start Times, GoTV</string>
    <string name="str_test_amount">12,800</string>
    <string name="str_email_only">Email</string>
    <string name="str_phone_num">Phone No.</string>
    <string name="str_service_provider">Service</string>
    <string name="str_service_id_title">Service No.</string>
    <string name="str_amt">Amount</string>
    <string name="str_bank">Bank</string>
    <string name="str_enter_userid">Enter your User ID</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_complete">Complete</string>
    <string name="str_complete_signup">Complete Signup</string>
    <string name="str_generated_userid">Your generated User ID</string>
    <string name="history_subcontent">%1$s - %2$s</string>
    <string name="str_logout">Logout</string>
    <string name="str_transaction_code_title">Your transaction code is</string>
    <string name="str_confirmation_warning">At this stage your payment is yet to be confirmed</string>
    <string name="transfer_amount_details">Transfer %1$s to</string>
    <string name="str_account_no">0001437352</string>
    <string name="str_mobile_info">We will contact you on %1$s within 10 minutes to update you on this transaction.</string>
    <string name="str_continue">Continue</string>
    <string name="str_payment_confirmed">Payment Confirmed</string>
    <string name="str_service_delivered">Service Delivered</string>
    <string name="str_any_questions">Do you have questions?</string>
    <string name="str_test_mobile">07003400027</string>
    <string name="str_comm_channel">Channel</string>
    <string name="str_services_details_title">Service Provider</string>
    <string name="str_transaction_info">Transaction Info</string>
    <string name="str_track_transaction">Track Transaction</string>
    <string name="str_transactioncode_title">Transaction Code</string>
    <string name="str_transac_details_transaction_code_desc">Icon to represent transaction code</string>
    <string name="str_transac_details_services_info_icon_desc">Icon to indicate details of services info in transaction details page</string>
    <string name="str_transac_details_transaction_info_icon_desc">Icon to describe the transaction info details in transaction details page</string>
    <string name="str_calendar_icon_desc">Icon to show a dat and time is displayed next/before it</string>
</resources>
