<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/txt_title_margin_bottom"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_clickable_default"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/userid_container_padding">

            <EditText
                android:id="@+id/editUserID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_weight="0.8"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/strHintUserId"
                android:inputType="text"
                android:textColor="@color/custom_dark_gray"
                android:textColorHint="@color/custom_mid_gray"
                android:textSize="@dimen/home_button_text_size" />

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/nav_button_height"
                android:layout_weight="0.2"
                android:background="@drawable/themed_button"
                android:text="@string/strEnter"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/home_button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_button_container_top_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTransactionHistory"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/nav_button_height"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="0.7"
                android:background="@drawable/themed_button"
                android:text="@string/strTransactionHistory"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/home_button_text_size" />

            <Button
                android:id="@+id/btnMyProfile"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/nav_button_height"
                android:layout_weight="0.3"
                android:background="@drawable/themed_button"
                android:text="@string/strMyProfile"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/home_button_text_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
