<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/rowServices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/page_indicator_radius"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:contentPaddingBottom="@dimen/card_padding_top_bottom"
        app:contentPaddingLeft="@dimen/row_padding_left"
        app:contentPaddingRight="@dimen/text_margin"
        app:contentPaddingTop="@dimen/card_padding_top_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/welcome_oval_icon_background"
                android:contentDescription="@string/img_services_icon_desc"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_satellite_dish" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/strPayTv"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/custom_dark_gray"
                    android:textSize="@dimen/home_title_text_size" />

                <TextView
                    android:id="@+id/item_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_light_font"
                    android:lines="1"
                    android:text="@string/str_paytv_subtitle"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/custom_mid_gray"
                    android:textSize="@dimen/intro_slogan_sub_text_size" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
